# spjrud-mini-rel

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
minirel/: __init__.py  examples.py  operations.py  parser.py  relation.py  repl.py  sqf_loader.py
sqf_exemples/sqf_exemples_20160912/sqf_exemples/: definitions.sqf  differences.sqf  exo_wijsen_02.sqf  exo_wijsen_03.sqf  exo_wijsen_04.sqf  joins.sqf  mixed.sqf  precedence.sqf  projections.sqf  renames.sqf  restrictions.sqf  selections.sqf  unions.sqf
tests/: conftest.py  test_operations.py  test_parser.py  test_relation.py  test_sqf_loader.py  test_sqf_samples.py
